# bit_blink

./: .gitignore  APKBUILD  Cargo.toml  LICENSE  README.md  README2.md  READMEBLUETOOTH.md  bitBlinkIcon.xcf  bit_blink.desktop  jgehring.md  lklingert.md
src/: bluetooth.rs  main.rs  storage.rs  style copy.css  style.css  ui.rs
src/bluetooth/: message.rs  utils.rs
src/storage/: message_provider.rs  storage.rs
src/test/: ui_test.rs
src/ui/: animations_page.rs  bottom_box.rs  effects_page.rs  entry_box.rs  header_bar.rs  icon_grid.rs  input_box.rs  message_list.rs  speed_page.rs  view_stack.rs  window.rs
