[package]
name = "badge_magic_linux_mobile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libadwaita = "0.4.1"
btleplug = "0.10.5"
tokio = { version = "1", features = ["full"] }
image = "0.24.6"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]