[package]
name = "bit_blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libadwaita = "0.4.1"
btleplug = "0.10.5"
tokio = { version = "1", features = ["full"] }
image = "0.24.6"
chrono = { version = "0.4" }
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
#gtk-test ={ version = "0.17.0"}
# atk = "0.17.1"
# gdk = "0.17.1"


[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
